# DataSci_project

./: .gitignore  EDA.ipynb  Introduction.py  README.md  countries.csv  line_data_list.csv  pyproject.toml  requirements.txt
analyze_function/: data_insights.py  ml_processing.py
app/data_cleaning/: formatdata.py
app/data_collection/: OpenAlexScraper.py  ScrapeV2.ipynb  main.py  open_alex_scraper.py
app/libs/: db.py
data_pipeline/: ScrapeV2.ipynb  db.py  get_data.py  main.py  open_alex_scraper.py
dataset/: autolabel_field.csv  countries.csv  country-coord.csv  line_data_list.csv  title_field_count.csv
pages/: 1_📈_Data_Insights.py  2_🌍_Mapping_Demo.py  3_📊_DataFrame_Preview.py  3_🤖_ML_Predictions.py
refactor/: formatdata.py
web-scraping/: OpenAlexScraper.py
