[tool.poetry]
name = "datasci-project"
version = "0.1.0"
description = "Chula DSDE project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
streamlit = "^1.40.2"
matplotlib = "^3.9.3"
networkx = "^3.4.2"
ipykernel = "^6.29.5"
pydeck = "^0.9.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
